feat: add update storage record request and implement storage detail route
